# rust-stats

./: Cargo.toml  README.md
src/: frequency.rs  lib.rs  minmax.rs  online.rs  sorted.rs  stats.rs  unsorted.rs  variance.rs
